examples/error-codes/undefined/UB-CER4-bad.output
Error: UB-CER4
Description: Dereferencing a pointer past the end of an array.
Type: Undefined behavior.
See also: C11 sec. 6.5.6:8, J.2:1 item 47
  at main(UB-CER4-bad.c:5)
  at <file-scope>(<unknown>)
Error: UB-EIO7
Description: Reading outside the bounds of an object.
Type: Undefined behavior.
See also: C11 sec. 6.3.2.1:1, J.2:1 item 19
  at main(UB-CER4-bad.c:5)
  at <file-scope>(<unknown>)
Error: UB-CEE2
Description: Indeterminate value used in an expression.
Type: Undefined behavior.
See also: C11 sec. 6.2.4, 6.7.9, 6.8, J.2:1 item 11
  at main(UB-CER4-bad.c:5)
  at <file-scope>(<unknown>)
