examples/error-codes/undefined/UB-CER4-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. (RV-Match team). All Rights Reserved.

int main(void){
	int a[5] = {1, 2, 3, 4, 5};
	*(&a[5]);
}
